--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'krona-one';
+    src: url(./assets/fonts/Krona_One/Krona_One/KronaOne-Regular.ttf);
+}
+
+.font-krona {
+    font-family: 'krona-one';
+}
